first changes after talking to peter

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,9 +1,6 @@
-
 \section{Introduction}
-The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the $\Lambda$CDM Model and determine its parameters. Contrary to the analysis of the CMB by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model of cosmology. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalisation of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
-It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, 
-%\citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from analysis of CFHTLens data,
-\citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet{2018arXiv181206076H} report $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep{2018PhRvD..98d3528T} reports $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from analysis of CFHTLens data. This discrepancy has received a lot of attention \citep{2013PDU.....2..166V}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
+The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the Standard Model of Cosmology and to determine its parameters. Contrary to the analysis of the Cosmic Microwave Background (CMB) by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model of cosmology. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalisation of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
+It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. This discrepancy has received a lot of attention \citep{2013PDU.....2..166V}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
 As weak gravitational lensing measures a tiny signal over a large sample, it is extremely sensitive to anything that systematically biases the measurements, such that the error bars in current surveys arise to equal parts from statistical and systematic uncertainties \citep[compare][]{2017MNRAS.465.1454H}. With next-generation surveys like the Large Synoptic Survey Telescope and Euclid right at the doorstep, systematic effects in gravitational lensing have received an unprecedented amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
